cabal-version:   3.0
name:            CuteCat
version:         0.1.0.0
license:         GPL-3.0-or-later
author:          james@hobson.space
maintainer:      James Hobson
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable CuteCat
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0,
                      RLL,
                      BuildHat,
                      SpikePrime,
                      Lego-Parts,
                      yopencv,
                      Yampa
    hs-source-dirs:   app
    default-language: Haskell2010
